# data-hide

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  push_to_dockerhub.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
admin/: Dockerfile  app.py  requirements.txt
admin/templates/: base.html  config.html  exclusions.html  index.html  run_detail.html  runs.html  targets.html
app/: __init__.py  anonymization.py  classification.py  health.py  keyvault.py  main.py  repository.py  service.py
app/application/: pipeline.py
app/domain/: aggregation.py  anonymization.py  classification.py  column_policy.py
app/infrastructure/: keyvault.py
app/infrastructure/repository/: __init__.py  _utils.py  audit.py  auth.py  delta.py  fabric.py  purview.py  sql.py
backend/: .env.example  Dockerfile  Makefile  main.py  pyproject.toml
backend/app/: main.py
backend/app/application/: config.py  pipeline.py  stages.py
backend/app/domain/: anonymization.py  classification.py  models.py  recognizers.py
backend/app/infrastructure/: keyvault.py  nlp.py
backend/app/infrastructure/repository/: __init__.py  _types.py  audit.py  auth.py  delta.py  fabric.py  purview.py  sql.py
backend/tests/: conftest.py  test_alerts.py  test_anonymization.py  test_anonymization_engine.py  test_audit_db.py  test_helpers.py  test_keyvault.py  test_numeric_binning.py  test_pipeline.py  test_spacy_bootstrap.py
docs/: learn_more.md
frontend/: .env.local.example  .gitignore  .npmrc  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/: auth.ts  middleware.ts
frontend/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx  robots.ts
frontend/src/app/admin/[[...path]]/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/alerts/: page.tsx
frontend/src/app/dashboard/audit/: page.tsx
frontend/src/app/dashboard/audit/[run_id]/: page.tsx
frontend/src/app/dashboard/config/: actions.ts  config-table.tsx  page.tsx
frontend/src/app/dashboard/exclusions/: actions.ts  exclusion-table.tsx  page.tsx
frontend/src/app/dashboard/row-scan/: actions.ts  page.tsx  row-scan-table.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/unauthorized/: page.tsx
frontend/src/components/: navbar.tsx  run-status-badge.tsx  session-monitor.tsx  sidebar.tsx
frontend/src/lib/: db.ts
frontend/src/lib/queries/: alerts.ts  apply-row-scan.ts  config.ts  exclusions.ts  runs.ts
frontend/src/types/: next-auth.d.ts
tests/: conftest.py  test_aggregation.py  test_alerts.py  test_anonymization.py  test_anonymization_engine.py  test_audit_db.py  test_gps.py  test_health.py  test_helpers.py  test_keyvault.py  test_numeric_binning.py  test_pipeline.py  test_spacy_bootstrap.py
